# tauri_file_manager

./: LICENSE  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
src/: App.tsx  disposeHandlers.ts  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/locale/: en-US.json
src-tauri/src/: file_manager.rs  infallible.rs  main.rs  utils.rs
src-tauri/src/commands/: disks.rs  files.rs  mod.rs
src/components/: Body.tsx  FolderItem.tsx
src/components/explorer/: PathInput.tsx
src/components/folder/: ExecuteItem.tsx  OpenItem.tsx
src/components/side/: Side.tsx
src/components/window/: Navbar.tsx  WindowControl.tsx
src/contexts/: FilesProvider.tsx
src/stores/: filesStore.ts  translationStore.ts
src/types/: DirEntry.ts  Disk.ts
