[package]
name = "file_manager"
version = "0.0.3"
description = "Simple fast File Manager"
authors = ["nitkanikita21", "DanikVitek"]
license = "MIT"
repository = "https://github.com/nitkanikita21/tauri_file_manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [
    "window-unmaximize",
    "window-maximize",
    "window-close",
    "window-minimize",
    "window-start-dragging",
    "shell-open",
] }
# tokio = { version = "1.32.0", features = ["sync", "full"] }
# lazy_static = "1.4.0"
humantime-serde = "1.1.1"
sysinfo = "0.29.10"
# color-eyre = "0.6.2"
open = "5.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
